# AirMesh

./: .gitignore  README.md
AirMesh/: AirMesh.sln
AirMesh/AirMesh/: AirMesh.vcxproj  CMakeLists.txt  air_mesh.cpp  air_mesh.h  main.cpp  shape.cpp  shape.h  triangle.cpp  triangle.h  triangle_half_edge.cpp  triangle_half_edge.h
